[package]
name = "signalstream"
description = "Send data over Unix signals. (Don't use this)."
license = "MIT"
repository = "https://github.com/stickynotememo/signalstream"
version = "1.0.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
libc = "0.2.178"
signal-hook = "0.4.1"

[dev-dependencies]
fork = "0.6.0"
